--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
+    "cors": "^2.8.4",
     "ejs": "^2.3.1",
     "errorhandler": "^1.5.0",
     "express": "^4.13.3",
+    "express-xml-bodyparser": "^0.3.0",
     "glob": "^6.0.4",
     "method-override": "^2.3.0",
     "mongoose": "^4.13.11",
@@ -25,7 +27,8 @@
     "path": "^0.12.7",
     "request": "^2.83.0",
     "serve-favicon": "^2.4.5",
-    "tslib": "^1.9.0"
+    "tslib": "^1.9.0",
+    "xml": "^1.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
