--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "request": "^2.83.0",
     "serve-favicon": "^2.4.5",
     "tslib": "^1.9.0",
-    "xml": "^1.0.1"
+    "xml": "^1.0.1",
+    "xml-js": "^1.6.7"
   },
   "devDependencies": {
     "chai": "^3.5.0",
